# sol-memecoin-staking

./: .env.example  .gitignore  README.md
programs/: Cargo.toml
programs/rewards/: Cargo.toml
programs/rewards/src/: cpi.rs  instruction.rs  lib.rs  processor.rs
programs/rewards/src/instructions/: add_vault.rs  claim.rs  deposit_mining.rs  fill_vault.rs  initialize_pool.rs  migrate_mining.rs  migrate_pool.rs  mod.rs  update_vault.rs  upgrade_mining.rs  withdraw_mining.rs
programs/rewards/src/state/: deprecated_mining.rs  deprecated_reward_pool.rs  mining.rs  mod.rs  reward_pool.rs  rewards_root.rs
programs/tests/: Cargo.toml
programs/tests/tests/: tests.rs
programs/tests/tests/rewards/: add_vault.rs  claim.rs  deposit_mining.rs  fill_vault.rs  initialize_pool.rs  migrate_mining.rs  migrate_pool.rs  mod.rs  upgrade_mining.rs  withdraw_mining.rs
programs/tests/tests/utils/: mod.rs  users.rs
programs/toolkit/: Cargo.toml
programs/toolkit/src/: main.rs
programs/toolkit/src/accounts/: mod.rs
programs/toolkit/src/helpers/: mod.rs
programs/utils/: Cargo.toml
programs/utils/src/: error.rs  lib.rs
programs/utils/src/cpi/: mod.rs  spl_token.rs  system.rs
