[package]
name = "everlend-rewards"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.18"
spl-token = { version = "4", features = [ "no-entrypoint" ] }
everlend-utils = { path = "../utils" }
borsh = { version = "1.5", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
