[package]
name = "everlend-tests"
version = "0.1.0"
edition = "2018"

[features]
test-bpf = []

[dev-dependencies]
solana-sdk = "1.18"
solana-program = "1.18"
solana-program-test = "1.18"
spl-token = { version = "4", features = [ "no-entrypoint" ] }
spl-token-lending = { git = "https://github.com/everlend/solana-program-library", features = [ "no-entrypoint" ] }
everlend-rewards = { path = "../rewards", features = ["no-entrypoint"] }
everlend-utils = { path = "../utils" }
rand = "0.8"
anchor-lang = "0.26.0"