[package]
name = "everlend-toolkit"
version = "0.1.0"
edition = "2018"
authors = ["everlend"]

[dependencies]
anyhow = "1.0.42"
anchor-lang = "0.26.0"
bs58 = "0.2.5"
clap = "2.33.3"
url = "2.2.2"
regex = "1.5.5"
dirs-next = "2.0.0"
num-derive = "0.3"
reqwest = { version = "0.11.11", features = ["blocking"] }
base64 = "0.13.0"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_yaml = "0.8.21"
serde_with = "1.12.0"
serde_json = "1.0.81"
solana-clap-utils = "1.18"
solana-cli-config = "1.18"
solana-account-decoder = "1.18"
solana-client = "1.18"
solana-sdk = "1.18"
solana-logger = "1.18"
solana-program = "1.18"
solana-program-test = "1.18"
tokio = "1.9.0"
sha2 = "0.10.6"
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
spl-token = { version = "4", features = [ "no-entrypoint" ] }
spl-token-lending = { git = "https://github.com/everlend/solana-program-library", features = [ "no-entrypoint" ] }
everlend-rewards = { path = "../rewards", features = [ "no-entrypoint" ] }
everlend-utils = { path = "../utils" }