[package]
name = "everlend-utils"
version = "0.1.0"
edition = "2018"

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.7"
thiserror = "1.0"
solana-program = "1.18"
anchor-lang = "0.26.0"
arrayref = "0.3.6"
spl-math = { version = "0.1.0", features = [ "no-entrypoint" ] }
spl-token = { version = "4", features = [ "no-entrypoint" ] }
spl-token-lending = { git = "https://github.com/everlend/solana-program-library", features = [ "no-entrypoint" ] }
borsh = { version = "1.5", features = ["derive"] }

[dev-dependencies]
solana-sdk = "1.18"

[lib]
crate-type = ["cdylib", "lib"]
